@@ -450,11 +450,20 @@ _cairo_image_surface_show_page (void *abstract_surface)
 }
 
 static cairo_int_status_t
-_cairo_image_surface_set_clip_region (void *abstract_surface,
+_cairo_image_abstract_surface_set_clip_region (void *abstract_surface,
+					       pixman_region16_t *region)
+{
+    cairo_image_surface_t *surface = (cairo_image_surface_t *) abstract_surface;
+
+    return _cairo_image_surface_set_clip_region (surface, region);
+}
+
+cairo_int_status_t
+_cairo_image_surface_set_clip_region (cairo_image_surface_t *surface,
 				      pixman_region16_t *region)
 {
-    cairo_image_surface_t *surf = (cairo_image_surface_t *) abstract_surface;
-    pixman_image_set_clip_region (surf->pixman_image, region);
+    pixman_image_set_clip_region (surface->pixman_image, region);
+
     return CAIRO_STATUS_SUCCESS;
 }
 
@@ -472,5 +481,5 @@ static const cairo_surface_backend_t cairo_image_surface_backend = {
     _cairo_image_surface_composite_trapezoids,
     _cairo_image_surface_copy_page,
     _cairo_image_surface_show_page,
-    _cairo_image_surface_set_clip_region
+    _cairo_image_abstract_surface_set_clip_region
 };
