@@ -1,5 +1,17 @@
 2004-03-30  Carl Worth  <cworth@isi.edu>
 
+	* src/cairo_xlib_surface.c (_cairo_xlib_surface_set_clip_region):
+	Add question on semantics with empty region. Fix missing return
+	value.
+
+	* src/cairo_image_surface.c
+	(_cairo_image_surface_set_clip_region): Export for internal use.
+	(_cairo_image_abstract_surface_set_clip_region): Add silly wrapper
+	to match the backend interface.
+
+	* src/cairo_gstate.c (_cairo_gstate_init_clip): Remove unused
+	variables.
+
 	* src/cairo.h: Add proposal for cairo_xlib_surface_set_size.
 
 	* BUGS: Added note about problem with cairo_scale_font.
